--- a/src/main/resources/templates/backend/car/car-location.html
+++ b/src/main/resources/templates/backend/car/car-location.html
@@ -10,6 +10,7 @@
 <link rel="stylesheet" th:href="@{/vendors/ti-icons/css/themify-icons.css}" href="vendors/ti-icons/css/themify-icons.css">
 <link rel="stylesheet" th:href="@{/vendors/feather/feather.css}" href="vendors/feather/feather.css">
 <link rel="shortcut icon" th:href="@{/images/favicon.png}" />
+<link rel="stylesheet" type="text/css" th:href="@{/fonts/font-awesome-4.7.0/css/font-awesome.min.css}" href="fonts/font-awesome-4.7.0/css/font-awesome.min.css">
 <!-- 本頁面使用css樣式 Plugin css for this page -->
 <link rel="stylesheet" th:href="@{/vendors/datatables.net-bs4/dataTables.bootstrap4.css}" href="vendors/datatables.net-bs4/dataTables.bootstrap4.css">
 <link rel="stylesheet" th:href="@{/js/select.dataTables.min.css}" href="vendors/datatables.net-bs4/select.dataTables.min.css">
@@ -43,54 +44,55 @@
 									</div>
 
 									<div class="table-responsive">
-										<table id="data-table" class="display expandable-table table-hover w-100" style="text-align: center">
-											<!--                       <colgroup> -->
-											<!--                         <col span="1" style="width: 5%;"> -->
-											<!--                         <col span="1" style="width: 8%;"> -->
-											<!--                         <col span="1" style="width: 5%;"> -->
-											<!--                         <col span="1" style="width: 8%;"> -->
-											<!--                         <col span="1" style="width: 8%;"> -->
-											<!--                         <col span="1" style="width: 5%;"> -->
-											<!--                         <col span="1" style="width: 20%;"> -->
-											<!--                         <col span="1" style="width: 20%;"> -->
-											<!--                         <col span="1" style="width: 10%;"> -->
-											<!--                         <col span="1" style="width: 11%;"> -->
-											<!--                       </colgroup> -->
+										<table id="data-table" class="display expandable-table table-hover w-100" style="text-align: center; font-size: 20px">
 											<thead>
 												<tr>
-													<th>公司</th>
-													<th>租車據點</th>
-													<th>縣市</th>
-													<th>地區</th>
-													<th>地址</th>
-													<th>電話</th>
-													<th>營業時間</th>
-													<th>車款數量</th>
-													<th>修改</th>
+													<th style="font-size: 1rem">ID</th>
+													<th style="font-size: 1rem">公司</th>
+													<th style="font-size: 1rem">租車據點</th>
+													<th style="font-size: 1rem">縣市</th>
+													<th style="font-size: 1rem">地區</th>
+													<th style="font-size: 1rem">地址</th>
+													<th style="font-size: 1rem">電話</th>
+													<th style="font-size: 1rem">營業時間</th>
+													<th style="font-size: 1rem">狀態</th>
+													<th style="font-size: 1rem">車款數量</th>
+													<th width="5%" style="font-size: 1rem">修改</th>
 												</tr>
 											</thead>
 											<tbody id="tbody">
-												<tr th:each="location:${carLocations}" class="odd gradeX">
-													<td th:text="${location.companyId}"></td>
-													<td th:text="${location.name}"></td>
-													<td th:text="${location.county}"></td>
-													<td th:text="${location.district}"></td>
-													<td th:text="${location.address}"></td>
-													<td th:text="${location.phone}"></td>
-													<td th:text="${#strings.substring(location.openTime,0,5) + ' ~ ' + #strings.substring(location.closeTime,0,5)}"></td>
-													<td th:text="${location.carOptions.size()}"></td>
+												<tr th:each="location:${carLocations}" class="odd gradeX" >
+													<td th:text="${location.id}" style="font-size: 1rem"></td>
+													<td th:text="${location.companyName}" style="font-size: 1rem"></td>
+													<td width="15%"  style="font-size: 1rem">		
+														<span th:text="${location.name}" ></span>													
+<!-- 														<button class="btn btn-light js-show-modal1 px-0"> -->
+															<i class="fa fa-info-circle" aria-hidden="true" style="color: orange;"></i>
+<!-- 														</button> -->
+													</td>
+													<td th:text="${location.county}" style="font-size: 1rem"></td>
+													<td th:text="${location.district}" style="font-size: 1rem"></td>
+													<td th:text="${location.address}" style="font-size: 1rem"></td>
+													<td th:text="${location.phone}" style="font-size: 1rem"></td>
+													<td th:text="${#strings.substring(location.openTime,0,5) + ' ~ ' + #strings.substring(location.closeTime,0,5)}" style="font-size: 1rem"></td>
 													<td>
-														<form th:action="@{/cars/locations/form/}+${location.id}" method="get" class="inline-block">
-<!-- 															<button type="submit" class="px-2  btn btn-warning btn-rounded btn-sm"> -->
-<!-- 																修改 -->
-<!-- 															</button> -->
-<!-- 														</form> -->
-<!-- 														<form th:id="'deleteLocation' + ${location.id}" th:action="@{/backend/cars/locations/}+${location.id}" -->
-<!-- 															th:method="delete" class="inline-block"> -->
-<!-- 															<button type="button" th:value="${location.id}" class="px-2 btn btn-delete btn-info btn-rounded btn-sm"> -->
-<!-- 																刪除 -->
-<!-- 															</button> -->
-														</form>
+														<span th:text="${location.status}" class="btn btn-success btn-sm status px-2" style="font-size: 0.9rem"></span>
+													</td>
+													<td th:text="${#aggregates.sum(location.carOptions.![amount])+ '/' +location.carOptions.size()}" style="font-size: 1rem"></td>
+													<td>
+<!-- 														<div class="btn-group" role="group" aria-label="Basic example"> -->
+<!-- 															<input name="locationImage" type="hidden" th:value="${location.image}"> -->
+
+															<a th:href="@{/vendor/cars/locations/form/{id}(id=${location.id})}" class="btn btn-light px-2"> 
+																<i class="fa fa-pencil-square-o" aria-hidden="true"></i>
+															</a>
+															<form th:id="'deleteLocation' + ${location.id}" th:action="@{/vendor/cars/locations/}+${location.id}"
+																th:method="delete" class="d-inline">
+																<button type="button" th:value="${location.id}" class="btn btn-delete btn-light px-2">
+																	<i class="fa fa-trash-o" aria-hidden="true"></i>
+																</button>
+															</form>
+<!-- 														</div> -->
 													</td>
 												</tr>
 											</tbody>
@@ -121,6 +123,12 @@
 	  $(document).ready(function() {
 		    $('#data-table').DataTable({
     
+	  		})
+	  		
+	  		$('.status').map(function() {
+	  			if ($(this).text() == '隱藏') {
+		  			$(this).removeClass('btn-success').addClass('btn-warning')
+	  			}
 	  		})
 		});
 	  
