--- a/src/main/resources/templates/frontend/hotel/NewHotel-form.html
+++ b/src/main/resources/templates/frontend/hotel/NewHotel-form.html
@@ -212,36 +212,41 @@
                                            class="form-control" onkeypress="return my_key(event)"/>
                                 </div>
                             </div>
-
-
+                            <!-- HTML part -->
                             <div class="row form-group my-4">
                                 <div class="col-lg-1"></div>
-                                <label class="col-lg-2 col-form-label" for="">據點照片</label>
+                                <label class="col-lg-2 col-form-label" for="photo">照片</label>
                                 <div class="col-lg-7">
-                                    <input type="file" class="form-control custom-file-input py-2 bgwhite"
-                                           style="background-color: white; padding-bottom: 3px" name="imagefile"
-                                           id="imagefile">
-                                    <div class="row" id="formFile">
-                                        <div class="col-12">
-                                            <img class="img-responsive my-4" alt="image" width="100%" height="auto"
-                                                 th:src="@{*{image}}"/>
-                                        </div>
+                                    <input type="file" name="imagefile" id="progressbarTWInput"
+                                           accept="image/gif, image/jpeg, image/png" multiple>
+                                    <div id="preview_progressbarTW_imgs"
+                                         style="width:100%; height: 300px; overflow:scroll;">
+                                        <p>目前沒有圖片</p>
                                     </div>
                                 </div>
-                            </div>
 
 
-                            <div class="d-flex justify-content-end mr-5 my-5">
+                                <!--                            &lt;!&ndash; HTML part &ndash;&gt;-->
+                                <!--                            <label>照片</label>-->
+                                <!--                            <input type="file" name="imagefile" id="progressbarTWInput"-->
+                                <!--                                   accept="image/gif, image/jpeg, image/png" multiple>-->
+                                <!--                            <div id="preview_progressbarTW_imgs"-->
+                                <!--                                 style="width:100%; height: 300px; overflow:scroll;">-->
+                                <!--                                <p>目前沒有圖片</p>-->
+                                <!--                            </div>-->
 
-                                <button id="btn-insert-correct-room" type="button"
-                                        class="btn btn-light mr-2 justify-content-end mr-4">
-                                    正確輸入
-                                </button>
-                                <button id="btn-insert-loc" type="submit"
-                                        class="btn btn-warning justify-content-end">
-                                    儲存資料
-                                </button>
-                            </div>
+
+                                <div class="d-flex justify-content-end mr-5 my-5">
+
+                                    <button id="btn-insert-correct-room" type="button"
+                                            class="btn btn-light mr-2 justify-content-end mr-4">
+                                        正確輸入
+                                    </button>
+                                    <button id="btn-insert-loc" type="submit"
+                                            class="btn btn-warning justify-content-end">
+                                        儲存資料
+                                    </button>
+                                </div>
                         </form>
                     </div>
                 </div>
@@ -291,6 +296,29 @@
     });
 
 
+</script>
+
+<script>
+    $("#progressbarTWInput").change(function () {
+        $("#preview_progressbarTW_imgs").html(""); // 清除預覽
+        readURL(this);
+    });
+
+    function readURL(input) {
+        if (input.files && input.files.length >= 0) {
+            for (var i = 0; i < input.files.length; i++) {
+                var reader = new FileReader();
+                reader.onload = function (e) {
+                    var img = $("<img width='300' height='200'>").attr('src', e.target.result);
+                    $("#preview_progressbarTW_imgs").append(img);
+                }
+                reader.readAsDataURL(input.files[i]);
+            }
+        } else {
+            var noPictures = $("<p>目前沒有圖片</p>");
+            $("#preview_progressbarTW_imgs").append(noPictures);
+        }
+    }
 </script>
 </body>
 
