--- a/src/main/resources/templates/frontend/partials/fragment.html
+++ b/src/main/resources/templates/frontend/partials/fragment.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
-	  xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 
 <head th:fragment="head">
     <title>GoTrip</title>
@@ -96,10 +96,12 @@
                     <div class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 js-show-modal-search">
                         <i class="zmdi zmdi-search"></i>
                     </div>
-                  <a href="/gotrip/showCart"><div class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti"
-                         data-notify="0" id="cartIcon">
-                        <i class="zmdi zmdi-shopping-cart"></i>
-                    </div></a> 
+                    <a href="/gotrip/showCart">
+                        <div class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti"
+                             data-notify="0" id="cartIcon">
+                            <i class="zmdi zmdi-shopping-cart"></i>
+                        </div>
+                    </a>
 
                     <a href="#"
                        class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti"
@@ -110,21 +112,21 @@
                     <div class="account p-t-22" sec:authorize="!isAuthenticated()">
                         <a th:href="@{/login}"
                            class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti"
-                           data-notify="0" >
+                           data-notify="0">
                             <i class="zmdi zmdi-account"></i>
                         </a>
                     </div>
-                    
+
                     <div class="account p-t-22" sec:authorize="isAuthenticated()">
-                        <a 
-                            class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti" 
-                            data-notify="0" > 
+                        <a
+                                class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti"
+                                data-notify="0">
                             <i class="zmdi zmdi-account"></i>
                         </a>
-<!--                     </div> -->
-                    
-<!--                     <div> -->
-                        
+                        <!--                     </div> -->
+
+                        <!--                     <div> -->
+
                         <ul class="sub-menu" sec:authorize="hasRole('ADMIN')">
                             <li><a th:href="@{/admin}">後台管理</a></li>
                             <li><a th:href="@{/vendor/ticket/1}">景點商家管理</a></li>
@@ -146,7 +148,7 @@
                             <li><a th:href="@{/logout}">登出</a></li>
                         </ul>
                     </div>
-                    
+
                 </div>
             </nav>
         </div>
@@ -886,14 +888,15 @@
     <script th:src="@{/vendors/MagnificPopup/jquery.magnific-popup.min.js}"
             src="vendors/MagnificPopup/jquery.magnific-popup.min.js"></script>
     <script th:src="@{/vendors/isotope/isotope.pkgd.min.js}" src="vendors/isotope/isotope.pkgd.min.js"></script>
-<!--     <script th:src="@{/vendors/sweetalert/sweetalert.min.js}" src="vendors/sweetalert/sweetalert.min.js"></script> -->
-    <script th:src="@{/vendors/sweetalert/sweetalert2.all.min.js}" src="vendors/sweetalert/sweetalert2.all.min.js"></script>
+    <!--     <script th:src="@{/vendors/sweetalert/sweetalert.min.js}" src="vendors/sweetalert/sweetalert.min.js"></script> -->
+    <script th:src="@{/vendors/sweetalert/sweetalert2.all.min.js}"
+            src="vendors/sweetalert/sweetalert2.all.min.js"></script>
     <script th:src="@{/vendors/perfect-scrollbar/perfect-scrollbar.min.js}"
             src="vendors/perfect-scrollbar/perfect-scrollbar.min.js"></script>
     <script th:src="@{/js/main.js}" src="js/main.js"></script>
     <script th:src="@{/js/frontend.js}" src="js/frontend.js"></script>
     <script th:src="@{/js/rating.js}" src=""></script>
-    <script th:src="@{/js/cartJS/update-cart.js}" src="js/cartJS/update-cart.js"></script>
+    <!--    <script th:src="@{/js/cartJS/update-cart.js}" src="js/cartJS/update-cart.js"></script>-->
 </div>
 
 </body>
